Fix Safari parallax dot stretching

--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -137,7 +137,7 @@
     }
 
     .parallax {
-        height: 100%;
+        height: 100dvh;
     }
 
     .phones {
